# basicbenchmark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  run_tests.yml
src/basicbenchmark/: __init__.py  benchmark.py  decorators.py
tests/: test_basic_benchmark.py  test_basic_benchmark_stats.py  test_decorators.py  test_print_time_benchmark.py  test_seconds_to_display_time.py
