[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "basicbenchmark"
version = "0.1.0-dev"
description = "A very simple and basic benchmarking tool. Probably so basic, you don't even need it."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Reinert Huseby Karlsen", email = "rhkarls@proton.me" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
]
