[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "basicbenchmark"
version = "0.1.0-dev"
description = "A very simple and basic benchmarking tool. Probably so basic, you don't even need it."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Reinert Huseby Karlsen", email = "rhkarls@proton.me" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [  ]

[tool.ruff]
line-length = 88
lint.select = [
  "B", # flake8-bugbear rules
  "E", # pycodestyle error rules
  "F", # pyflakes rules
  "I", # isort rules
  "W", # pycodestyle warning rules
]
lint.ignore = [
  "E501", # line-too-long
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks
  "ES01", # but don't require an extended summary
  "EX01", # or examples
  "SA01", # or a see also section
  "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
  '\\.__init__$',
  '\\.__repr__$',
  '\\.__str__$',
]
