[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "basicbenchmark"
version = "0.2.0"
description = "A very simple and basic benchmarking tool for timing functions."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Reinert Huseby Karlsen", email = "rhkarls@proton.me" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [  ]

[tool.ruff]
line-length = 88
lint.select = [
  "B", # flake8-bugbear rules
  "E", # pycodestyle error rules
  "F", # pyflakes rules
  "I", # isort rules
  "W", # pycodestyle warning rules
]
lint.ignore = [
  "E501", # line-too-long
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest-cov>=6.0.0",
  "pytest>=8.3.4",
  "ruff>=0.8.2",
  "interrogate>=1.7.0",
]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks
  "ES01", # but don't require an extended summary
  "EX01", # or examples
  "SA01", # or a see also section
  "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
  '\\.__init__$',
  '\\.__repr__$',
  '\\.__str__$',
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
fail-under = 80
exclude = [ "tests" ]
